apps/gopro-control/k8s-deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gopro-control
  namespace: gopro-control
  labels:
    app: gopro-control
spec:
  selector:
    matchLabels:
      app: gopro-control
  replicas: 1
  template:
    metadata:
      labels:
        app: gopro-control
    spec:
      containers:
        - name: gopro-control
          hostNetwork: true
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: '500m'
              memory: 500Mi
          image: quay.io/kenmoini/gopro-control:latest
          ports:
            - containerPort: 8888
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  paused: false
